# aws-xfa

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  SSO_CONFIGURATION.md  aws-xfa  pyproject.toml
awsxfa/: __init__.py  __main__.py  daemon.py  util.py  xfa_config.py
